Fixed: Menu block spacing issue as per GH issue 36. *SCSS only - NO markup changes.

--- a/src/_core/layouts/multicol/_multicol.scss
+++ b/src/_core/layouts/multicol/_multicol.scss
@@ -184,14 +184,3 @@
 	}
 }
 
-// b-menu styles
-.multicol__nav .b-menu ul ul li:last-child a {
-	padding-bottom: 14px;
-}
-
-
-
-.multicol__nav .b-menu ul ul ul li:last-child a {
-	padding-top: 0px;
-	padding-bottom: 2px;
-}
